--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,13 +1,13 @@
 [programs.localnet]
-gem_bank = "bankHHdqMuaaST4qQk6mkzxGeKPHWmqdgor6Gs8r88m"
-gem_farm = "farmL4xeBFVXJqtfxCzU9b28QACM7E2W2ctT6epAjvE"
+gem_bank = "J8sv7vJhTwbt6fd2SUYor8PfGPprDPYFuoRUdK4vupM2"
+gem_farm = "68Zrag3WPFRAcmuR6C1HmYVSjNZNBjjHiQGg1XnFoaQJ"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/ilmoi/.config/solana/id.json"
+wallet = "/root/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
